helm/k8s-monitoring/kube-prometheus-stack/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-nginx-ingress
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: "nginx" # which can be replaced by gce, gce-internal or istio
spec:
  rules:
  - host: icg.example.com
    http:
      paths:
      - path: /grafana
        pathType: Prefix 
        backend:
          service:
            name: kube-prometheus-stack-grafana
            port:
              number: 30300
